@@ -116,8 +116,8 @@ let primitive (p : Lambda.primitive) (args, approxs) expr dbg ~size_int
       | Paddint -> S.const_int_expr expr (x + y)
       | Psubint -> S.const_int_expr expr (x - y)
       | Pmulint -> S.const_int_expr expr (x * y)
-      | Pdivint when y <> 0 -> S.const_int_expr expr (x / y)
-      | Pmodint when y <> 0 -> S.const_int_expr expr (x mod y)
+      | Pdivint _ when y <> 0 -> S.const_int_expr expr (x / y)
+      | Pmodint _ when y <> 0 -> S.const_int_expr expr (x mod y)
       | Pandint -> S.const_int_expr expr (x land y)
       | Porint -> S.const_int_expr expr (x lor y)
       | Pxorint -> S.const_int_expr expr (x lxor y)
